<resources>
    <!--应用名称-->
    <string name="app_name">书源</string>

    <!--主页导航栏文字-->
    <string name="nav_bookshelf">书架</string>
    <string name="nav_me">我的</string>

    <string name="search_bar_hint">搜索</string>

    <!--书架界面-->
    <string name="bookshelf_filter">筛选</string>
    <string name="bookshelf_filter_title">书架筛选</string>

    <!--SearchActivity-->
    <string name="cancel">取消</string>

    <!--ReadActivity-->
    <string name="toc">目录</string>
    <string name="detail">详情</string>
    <string name="landscape">横屏</string>
    <string name="portrait">竖屏</string>
    <string name="setting">设置</string>
    <string name="font_setting">字体设置</string>
    <string name="reduce_font_size">A-</string>
    <string name="increase_font_size">A+</string>
    <string name="revert_font_size">A</string>

    <!--NovelHomeActivity-->
    <string name="add_book_btn_text">加入书架</string>
    <string name="read_book_btn_text">立即阅读</string>
    <string name="download_btn_text">缓存</string>

    <!--描述类字符串-->
    <string name="des_book_cover">书籍封面</string>
    <string name="des_bookshelf_item_manage">书本管理按钮</string>
    <string name="des_back">返回键</string>
    <string name="des_read_history">阅读历史记录</string>
    <string name="des_bookshelf_menu_btn">书架菜单按钮</string>
    <string name="des_prev_chap">切换上一章</string>
    <string name="des_next_chap">切换下一章</string>
    <string name="des_novel_cover">小说封面</string>

</resources>