<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/status_bar_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/novel_home_cover"
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:contentDescription="@string/des_novel_cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/novel_home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:id="@+id/novel_home_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/novel_home_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/novel_home_like_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book_btn_text"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/novel_home_read_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_book_btn_text"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/novel_home_download_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_btn_text"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>