<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bookshelf_drawer">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bookshelf">

        <RelativeLayout
            android:id="@+id/bookshelf_top_bar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="12dp">
            <TextView
                android:id="@+id/bookshelf_filter_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bookshelf_filter"
                android:layout_alignParentStart="true"
                app:drawableEndCompat="@drawable/ic_filter"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/bookshelf_search_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:drawablePadding="5dp"
                android:background="@drawable/background_search_bar"
                android:layout_toEndOf="@id/bookshelf_filter_btn"
                android:layout_toStartOf="@id/bookshelf_read_history_btn"
                android:text="@string/search_bar_hint"
                app:drawableStartCompat="@drawable/ic_search"
                android:gravity="center_vertical"
                android:textSize="14sp"/>
            <ImageButton
                android:id="@+id/bookshelf_read_history_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/ic_read_history"
                android:layout_toStartOf="@id/bookshelf_menu_btn"
                android:paddingHorizontal="10dp"
                android:contentDescription="@string/des_read_history"
                android:paddingTop="5dp"/>
            <ImageButton
                android:id="@+id/bookshelf_menu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/ic_bookshelf_menu"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/des_bookshelf_menu_btn"
                android:paddingTop="5dp"/>

        </RelativeLayout>

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refresh_bookshelf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/bookshelf_top_bar"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="20dp"
                    android:textSize="16sp"
                    android:text="今日已读3分钟"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/book_list"
                    android:background="@drawable/background_bookshelf_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="@drawable/background_drawer">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="10dp">
            <ImageButton
                android:id="@+id/bookshelf_filter_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/des_back"
                android:background="@color/white"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bookshelf_filter_title"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>